--- a/backend/config.json
+++ b/backend/config.json
@@ -1,3 +1,3 @@
 {
-    
+    "connectionString": "mongodb+srv://khwahishVaid:khwahishVaid@cluster0.mcxv0.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 }
