--- a/frontend/Notes_App/vercel.json
+++ b/frontend/Notes_App/vercel.json
@@ -1,3 +1,3 @@
 {
-"rewrite": [{"source:": "/(.*)", "destination": "/index.html"}]
+"rewrite": [{"source:": "/(.*)", "destination": "/src/App.jsx"}]
 }
